--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Laurent Nguyen <laurent.nguyen@cea.fr>
 Vincent Ducrot <vincent.ducrot.tgcc@cea.fr>
 Benoit Da Mota <benoit.damota.tgcc@cea.fr>
-Benoit Mathieu <benoit.mathieu@cea.fr>
+Benoit Mathieu <-> CEA (Original developer)
 Matthieu Hautreux <matthieu.hautreux@cea.fr>
 
