AUTHORS: update authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-Laurent Nguyen <laurent.nguyen@cea.fr>
+Laurent Nguyen <laurent.nguyen@cea.fr> (Main developer)
 Vincent Ducrot <vincent.ducrot.tgcc@cea.fr>
+Marie Cadennes <marie.cadennes.tgcc@cea.fr>
 Benoit Da Mota <benoit.damota.tgcc@cea.fr>
 Benoit Mathieu <-> CEA (Original developer)
 Matthieu Hautreux <matthieu.hautreux@cea.fr>
