Doc: update NEWS and README.md

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+* Changes in hp2p-3.2 - 09/03/2017
+=====================
+
+   -- add Plotly HTML for visualization
+
 * Changes in hp2p-3.1 - 01/04/2016
 =====================
 
