--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ Marie Cadennes <marie.cadennes.tgcc@cea.fr>
 Benoit Da Mota <benoit.damota.tgcc@cea.fr>
 Benoit Mathieu <-> CEA (Original developer)
 Matthieu Hautreux <matthieu.hautreux@cea.fr>
-
+Tony Delforge <tony.delforge.tgcc@cea.fr>
