--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Benoit Da Mota <benoit.damota.tgcc@cea.fr>
 Benoit Mathieu <-> CEA (Original developer)
 Matthieu Hautreux <matthieu.hautreux@cea.fr>
 Tony Delforge <tony.delforge.tgcc@cea.fr>
+Alexis Couture <alexis.couture.tgcc@cea.fr>
