--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,9 @@
 Laurent Nguyen <laurent.nguyen@cea.fr> (Main developer)
+Benoit Mathieu <-> CEA (Original developer)
 Vincent Ducrot <vincent.ducrot.tgcc@cea.fr>
 Marie Cadennes <marie.cadennes.tgcc@cea.fr>
 Benoit Da Mota <benoit.damota.tgcc@cea.fr>
-Benoit Mathieu <-> CEA (Original developer)
 Matthieu Hautreux <matthieu.hautreux@cea.fr>
 Tony Delforge <tony.delforge.tgcc@cea.fr>
 Alexis Couture <alexis.couture.tgcc@cea.fr>
+Marc Joos <marc.joos@cea.fr>
